--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,20 @@
 <body>
   <main>
     <h1>Vanilla JavaScript App</h1>
+    <p>Loading content from the API: <b id="name">...</b></p>
+    <br /><br />
     <h2>n.l.b</h2>
   </main>
+
+  <script>
+    (
+      async function () {
+        const { text } = await (await fetch(`/api/message`)).json();
+        document.querySelector('#name').textContent = text;
+      }()
+    );
+  </script>
+
 </body>
 
 </html>
